--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,21 @@
     padding: 3;
     border: 3;
 }
+
+body{
+    background-color: #000000;
+    color:#FFF;
+}
+.carousel-indicators {
+    top: 105%;
+}
+
+.carousel-indicators [data-bs-target] {
+  background-color: #000000;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+h1 {
+    color:white;
+}
